test/fail/type-alias-path/importM1.mo
import M "m1";

module {
  public func m() : M.MyType = M.m();
}